--- a/adapsy-webapp/src/main/webapp/static/login.html
+++ b/adapsy-webapp/src/main/webapp/static/login.html
@@ -14,8 +14,8 @@
 		mounted_on : '/_app'
 	}
 </script>
-<script src="js/login.js"></script>
-<link rel="stylesheet" media="screen" href="css/screen.css" />
+<script src="/js/login.js"></script>
+<link rel="stylesheet" media="screen" href="/css/screen.css" />
 <meta name="param" content="authenticity_token" />
 <meta name="token" content="AdSales Managment" />
 </head>
@@ -24,7 +24,7 @@
 		<div class="public-container">
 			<div class="public-wrapper">
 				<a class="brand-logo" href="/_app/"><img
-					src="images/logo-v2.png" alt="Logo white" /></a>
+					src="/img/logo/logo-v2.png" alt="Logo white" /></a>
 				<div class="public-box">
 					<div class="public-intro">
 						<h3>Log in to your account</h3>
