--- a/adapsy-webapp/src/main/webapp/static/login.html
+++ b/adapsy-webapp/src/main/webapp/static/login.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8" />
 <meta content="ie=edge" http-equiv="x-ua-compatible" />
-<title>Sign in | Adthruster</title>
+<title>Sign in V2 | Adthruster</title>
 <meta content="width=device-width, initial-scale=1" name="viewport" />
 <link
 	href="https://fonts.googleapis.com/css?family=Muli:400,300|Noto+Sans:400,700"
