--- a/adapsy-webapp/src/main/webapp/static/accounting.html
+++ b/adapsy-webapp/src/main/webapp/static/accounting.html
@@ -14,7 +14,7 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->  
 </head>
-  <body class="preload">
+  <body class="preload" ng-app="app" ng-controller="societeController">
 
     <nav class="sidenav" id="sidenav">
       <div class="logo"><img src="img/logo.png"></div>
