--- a/adapsy-webapp/src/main/webapp/static/accounting.html
+++ b/adapsy-webapp/src/main/webapp/static/accounting.html
@@ -377,6 +377,10 @@
     <!-- ================== END: Outdated Browser ================= -->
 
     <!-- Scripts -->
+    <script src="/js/angular/angular.min.js"></script>
+	  <script src="/js/ngstorage/ngStorage.min.js"></script>
+	  <script src="/js/oauth-ng/dist/oauth-ng.js"></script>
+    <script src="/js/app.js"></script>		
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/outdatedbrowser.min.js"></script>
