--- a/adapsy-webapp/src/main/webapp/static/advertiser.html
+++ b/adapsy-webapp/src/main/webapp/static/advertiser.html
@@ -336,5 +336,11 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/outdatedbrowser.min.js"></script>
     <script src="js/scripts.min.js"></script>
+    <!--Script Added -->
+    <script src="/js/angular/angular.min.js"></script>
+	<script src="/js/ngstorage/ngStorage.min.js"></script>
+	<script src="/js/oauth-ng/dist/oauth-ng.js"></script>
+	<script src="/js/app.js"></script>		
+    <!--End Script Added-->
   </body>
 </html>
