--- a/adapsy-webapp/src/main/webapp/static/societe.html
+++ b/adapsy-webapp/src/main/webapp/static/societe.html
@@ -7,18 +7,18 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		
-	<script src="/js/angular/angular.min.js"></script>
-	<script src="/js/ngstorage/ngStorage.min.js"></script>
-	<script src="/js/oauth-ng/dist/oauth-ng.js"></script>
-	<script src="/js/app.js"></script>		
-	<script src="/js/jquery.js"></script>
-	<script src="/js/nav-menu.js"></script>
-	<script src="/js/user-menu.js"></script>
-	<script src="/js/help.js"></script>
-	<script src="/js/table-contact.js"></script>
+	<script src="js/angular/angular.min.js"></script>
+	<script src="js/ngstorage/ngStorage.min.js"></script>
+	<script src="js/oauth-ng/dist/oauth-ng.js"></script>
+	<script src="js/app.js"></script>		
+	<script src="js/jquery.js"></script>
+	<script src="js/nav-menu.js"></script>
+	<script src="js/user-menu.js"></script>
+	<script src="js/help.js"></script>
+	<script src="js/table-contact.js"></script>
 	
-	<link rel="stylesheet" type="text/css" href="/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body ng-app="app" ng-controller="societeController">
 	<div id="container">
@@ -31,7 +31,7 @@
 							<li class="bottom-separation user">
 								Profil
 								<div class="logo">
-									<img src="/img/logo/logo-bulle.png" width="30">
+									<img src="img/logo/logo-bulle.png" width="30">
 								</div>
 							</li>
 							<li>
@@ -513,7 +513,7 @@
 	<div id="nav-aside">
 		<div class="logo">
 			<a href="#">
-				<img src="/img/logo/logo.png" width="45">
+				<img src="img/logo/logo.png" width="45">
 			</a>
 		</div>
 		<div class="wrap">
