--- a/adapsy-webapp/src/main/webapp/static/societe.html
+++ b/adapsy-webapp/src/main/webapp/static/societe.html
@@ -193,7 +193,7 @@
                 </div>
                 <div class="form-group">
                   <label class="required">Name</label>
-                  <input type="text" class="form-control" placeholder="Name">
+                  <input type="text" class="form-control" placeholder="{{contact.nom}}">
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-6">
